# Chemkin

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/Chemkin/: constants.hh  kinetics.hh  reactionConstants.hh
source/: CMakeLists.txt  core.cc  kinetics.cc  reactionConstants.cc
